parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSAND
    AMPERSANDEQUAL
    ANYTYPE
    ASTERISKEQUAL
    ASTERISKPERCENT
    ASTERISKPERCENTEQUAL
    CARET
    CARETEQUAL
    CHAR
    CONTINUE
    DOT3
    DOTASTERISK
    DOTQUESTIONMARK
    ELSE
    ENUM
    EQUALRARROW
    EXCLAMATIONMARK
    EXCLAMATIONMARKEQUAL
    LARROW2
    LARROW2EQUAL
    LARROW2PIPE
    LARROW2PIPEEQUAL
    LARROWEQUAL
    LBRACKET
    LINE_COMMENT
    MINUSRARROW
    ORELSE
    PERCENTEQUAL
    PIPE2
    PIPEEQUAL
    PLUS2
    QUESTIONMARK
    RARROW2
    RARROW2EQUAL
    RARROWEQUAL
    RBRACKET
    SLASHEQUAL
    STRUCT
    SWITCH
    TILDE
    UNDEFINED
    UNION

Grammar

Rule 0     S' -> programa
Rule 1     programa -> funcao
Rule 2     programa -> decl
Rule 3     programa -> funcao programa
Rule 4     programa -> decl programa
Rule 5     funcao -> PUB FN ID LPAREN params RPAREN tipo_retorno LBRACE decl_interna RBRACE
Rule 6     funcao -> PUB FN ID LPAREN RPAREN tipo_retorno LBRACE decl_interna RBRACE
Rule 7     funcao -> FN ID LPAREN params RPAREN tipo_retorno LBRACE decl_interna RBRACE
Rule 8     funcao -> FN ID LPAREN RPAREN tipo_retorno LBRACE decl_interna RBRACE
Rule 9     funcao -> PUB FN ID LPAREN params RPAREN tipo_retorno LBRACE RBRACE
Rule 10    funcao -> FN ID LPAREN params RPAREN tipo_retorno LBRACE RBRACE
Rule 11    funcao -> PUB FN ID LPAREN RPAREN tipo_retorno LBRACE RBRACE
Rule 12    funcao -> FN ID LPAREN RPAREN tipo_retorno LBRACE RBRACE
Rule 13    tipo_retorno -> VOID
Rule 14    tipo_retorno -> I8
Rule 15    tipo_retorno -> U8
Rule 16    tipo_retorno -> I16
Rule 17    tipo_retorno -> U16
Rule 18    tipo_retorno -> I32
Rule 19    tipo_retorno -> U32
Rule 20    tipo_retorno -> I64
Rule 21    tipo_retorno -> U64
Rule 22    tipo_retorno -> I128
Rule 23    tipo_retorno -> U128
Rule 24    params -> ID COLON tipo_retorno
Rule 25    params -> ID COLON tipo_retorno COMMA params
Rule 26    call -> ID LPAREN args RPAREN
Rule 27    call -> ID LPAREN RPAREN
Rule 28    args -> ID
Rule 29    args -> ID COMMA args
Rule 30    args -> STRING COMMA DOT LBRACE args RBRACE
Rule 31    args -> STRING COMMA DOT LBRACE RBRACE
Rule 32    decl -> VAR ID COLON tipo_retorno EQUAL expr SEMICOLON
Rule 33    decl -> CONST ID EQUAL expr SEMICOLON
Rule 34    decl -> CONST ID COLON tipo_retorno EQUAL expr SEMICOLON
Rule 35    decl -> ID EQUAL expr SEMICOLON
Rule 36    decl -> expr SEMICOLON
Rule 37    decl -> ID PLUSEQUAL expr SEMICOLON
Rule 38    decl -> ID PLUSPERCENT expr SEMICOLON
Rule 39    decl -> ID PLUSPERCENTEQUAL expr SEMICOLON
Rule 40    decl -> ID PLUSPIPE expr SEMICOLON
Rule 41    decl -> ID PLUSPIPEEQUAL expr SEMICOLON
Rule 42    decl -> ID MINUSEQUAL expr SEMICOLON
Rule 43    decl -> ID MINUSPERCENT expr SEMICOLON
Rule 44    decl -> ID MINUSPERCENTEQUAL expr SEMICOLON
Rule 45    decl -> ID MINUSPIPE expr SEMICOLON
Rule 46    decl -> ID MINUSPIPEEQUAL expr SEMICOLON
Rule 47    expr -> BUILTINIDENTIFIER LPAREN STRING RPAREN
Rule 48    expr -> BUILTINIDENTIFIER LPAREN STRING RPAREN DOT expr
Rule 49    expr -> ID PLUS expr
Rule 50    expr -> ID
Rule 51    expr -> ID DOT expr
Rule 52    expr -> call
Rule 53    expr -> INTEGER
Rule 54    expr -> ID MINUS expr
Rule 55    expr -> ID SLASH expr
Rule 56    expr -> ID ASTERISK expr
Rule 57    expr -> ID RARROW expr
Rule 58    expr -> ID LARROW expr
Rule 59    expr -> ID PERCENT expr
Rule 60    expr -> ID EQUALEQUAL expr
Rule 61    expr -> ID AND expr
Rule 62    expr -> ID OR expr
Rule 63    expr -> TRUE
Rule 64    expr -> FALSE
Rule 65    decl_interna -> BREAK SEMICOLON
Rule 66    decl_interna -> RETURN expr SEMICOLON
Rule 67    decl_interna -> WHILE LPAREN expr RPAREN LBRACE decl_interna RBRACE
Rule 68    decl_interna -> FOR LPAREN INTEGER DOT2 INTEGER RPAREN PIPE ID PIPE LBRACE decl_interna RBRACE
Rule 69    decl_interna -> expr SEMICOLON
Rule 70    decl_interna -> IF LPAREN expr RPAREN LBRACE decl_interna RBRACE
Rule 71    decl_interna -> VAR ID COLON tipo_retorno EQUAL expr SEMICOLON
Rule 72    decl_interna -> CONST ID EQUAL expr SEMICOLON
Rule 73    decl_interna -> CONST ID COLON tipo_retorno EQUAL expr SEMICOLON
Rule 74    decl_interna -> VAR ID COLON tipo_retorno EQUAL expr SEMICOLON decl_interna
Rule 75    decl_interna -> CONST ID EQUAL expr SEMICOLON decl_interna
Rule 76    decl_interna -> CONST ID COLON tipo_retorno EQUAL expr SEMICOLON decl_interna
Rule 77    decl_interna -> ID EQUAL expr SEMICOLON
Rule 78    decl_interna -> ID PLUSEQUAL expr SEMICOLON
Rule 79    decl_interna -> ID PLUSPERCENT expr SEMICOLON
Rule 80    decl_interna -> ID PLUSPERCENTEQUAL expr SEMICOLON
Rule 81    decl_interna -> ID PLUSPIPE expr SEMICOLON
Rule 82    decl_interna -> ID EQUAL expr SEMICOLON decl_interna
Rule 83    decl_interna -> ID PLUSEQUAL expr SEMICOLON decl_interna
Rule 84    decl_interna -> ID PLUSPERCENT expr SEMICOLON decl_interna
Rule 85    decl_interna -> ID PLUSPERCENTEQUAL expr SEMICOLON decl_interna
Rule 86    decl_interna -> ID PLUSPIPE expr SEMICOLON decl_interna
Rule 87    decl_interna -> ID PLUSPIPEEQUAL expr SEMICOLON
Rule 88    decl_interna -> ID MINUSEQUAL expr SEMICOLON
Rule 89    decl_interna -> ID MINUSPERCENT expr SEMICOLON
Rule 90    decl_interna -> ID MINUSPERCENTEQUAL expr SEMICOLON
Rule 91    decl_interna -> ID MINUSPIPE expr SEMICOLON
Rule 92    decl_interna -> ID MINUSPIPEEQUAL expr SEMICOLON
Rule 93    decl_interna -> ID PLUSPIPEEQUAL expr SEMICOLON decl_interna
Rule 94    decl_interna -> ID MINUSEQUAL expr SEMICOLON decl_interna
Rule 95    decl_interna -> ID MINUSPERCENT expr SEMICOLON decl_interna
Rule 96    decl_interna -> ID MINUSPERCENTEQUAL expr SEMICOLON decl_interna
Rule 97    decl_interna -> ID MINUSPIPE expr SEMICOLON decl_interna
Rule 98    decl_interna -> ID MINUSPIPEEQUAL expr SEMICOLON decl_interna
Rule 99    decl_interna -> expr SEMICOLON decl_interna
Rule 100   decl_interna -> BREAK SEMICOLON decl_interna
Rule 101   decl_interna -> RETURN expr SEMICOLON decl_interna
Rule 102   decl_interna -> WHILE LPAREN expr RPAREN LBRACE decl_interna RBRACE decl_interna
Rule 103   decl_interna -> FOR LPAREN INTEGER DOT2 INTEGER RPAREN PIPE ID PIPE LBRACE decl_interna RBRACE decl_interna
Rule 104   decl_interna -> IF LPAREN expr RPAREN LBRACE decl_interna RBRACE decl_interna

Terminals, with rules where they appear

AMPERSAND            : 
AMPERSANDEQUAL       : 
AND                  : 61
ANYTYPE              : 
ASTERISK             : 56
ASTERISKEQUAL        : 
ASTERISKPERCENT      : 
ASTERISKPERCENTEQUAL : 
BREAK                : 65 100
BUILTINIDENTIFIER    : 47 48
CARET                : 
CARETEQUAL           : 
CHAR                 : 
COLON                : 24 25 32 34 71 73 74 76
COMMA                : 25 29 30 31
CONST                : 33 34 72 73 75 76
CONTINUE             : 
DOT                  : 30 31 48 51
DOT2                 : 68 103
DOT3                 : 
DOTASTERISK          : 
DOTQUESTIONMARK      : 
ELSE                 : 
ENUM                 : 
EQUAL                : 32 33 34 35 71 72 73 74 75 76 77 82
EQUALEQUAL           : 60
EQUALRARROW          : 
EXCLAMATIONMARK      : 
EXCLAMATIONMARKEQUAL : 
FALSE                : 64
FN                   : 5 6 7 8 9 10 11 12
FOR                  : 68 103
I128                 : 22
I16                  : 16
I32                  : 18
I64                  : 20
I8                   : 14
ID                   : 5 6 7 8 9 10 11 12 24 25 26 27 28 29 32 33 34 35 37 38 39 40 41 42 43 44 45 46 49 50 51 54 55 56 57 58 59 60 61 62 68 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 103
IF                   : 70 104
INTEGER              : 53 68 68 103 103
LARROW               : 58
LARROW2              : 
LARROW2EQUAL         : 
LARROW2PIPE          : 
LARROW2PIPEEQUAL     : 
LARROWEQUAL          : 
LBRACE               : 5 6 7 8 9 10 11 12 30 31 67 68 70 102 103 104
LBRACKET             : 
LINE_COMMENT         : 
LPAREN               : 5 6 7 8 9 10 11 12 26 27 47 48 67 68 70 102 103 104
MINUS                : 54
MINUSEQUAL           : 42 88 94
MINUSPERCENT         : 43 89 95
MINUSPERCENTEQUAL    : 44 90 96
MINUSPIPE            : 45 91 97
MINUSPIPEEQUAL       : 46 92 98
MINUSRARROW          : 
OR                   : 62
ORELSE               : 
PERCENT              : 59
PERCENTEQUAL         : 
PIPE                 : 68 68 103 103
PIPE2                : 
PIPEEQUAL            : 
PLUS                 : 49
PLUS2                : 
PLUSEQUAL            : 37 78 83
PLUSPERCENT          : 38 79 84
PLUSPERCENTEQUAL     : 39 80 85
PLUSPIPE             : 40 81 86
PLUSPIPEEQUAL        : 41 87 93
PUB                  : 5 6 9 11
QUESTIONMARK         : 
RARROW               : 57
RARROW2              : 
RARROW2EQUAL         : 
RARROWEQUAL          : 
RBRACE               : 5 6 7 8 9 10 11 12 30 31 67 68 70 102 103 104
RBRACKET             : 
RETURN               : 66 101
RPAREN               : 5 6 7 8 9 10 11 12 26 27 47 48 67 68 70 102 103 104
SEMICOLON            : 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 65 66 69 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
SLASH                : 55
SLASHEQUAL           : 
STRING               : 30 31 47 48
STRUCT               : 
SWITCH               : 
TILDE                : 
TRUE                 : 63
U128                 : 23
U16                  : 17
U32                  : 19
U64                  : 21
U8                   : 15
UNDEFINED            : 
UNION                : 
VAR                  : 32 71 74
VOID                 : 13
WHILE                : 67 102
error                : 

Nonterminals, with rules where they appear

args                 : 26 29 30
call                 : 52
decl                 : 2 4
decl_interna         : 5 6 7 8 67 68 70 74 75 76 82 83 84 85 86 93 94 95 96 97 98 99 100 101 102 102 103 103 104 104
expr                 : 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 48 49 51 54 55 56 57 58 59 60 61 62 66 67 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 101 102 104
funcao               : 1 3
params               : 5 7 9 10 25
programa             : 3 4 0
tipo_retorno         : 5 6 7 8 9 10 11 12 24 25 32 34 71 73 74 76

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . funcao
    (2) programa -> . decl
    (3) programa -> . funcao programa
    (4) programa -> . decl programa
    (5) funcao -> . PUB FN ID LPAREN params RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (6) funcao -> . PUB FN ID LPAREN RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (7) funcao -> . FN ID LPAREN params RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (8) funcao -> . FN ID LPAREN RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (9) funcao -> . PUB FN ID LPAREN params RPAREN tipo_retorno LBRACE RBRACE
    (10) funcao -> . FN ID LPAREN params RPAREN tipo_retorno LBRACE RBRACE
    (11) funcao -> . PUB FN ID LPAREN RPAREN tipo_retorno LBRACE RBRACE
    (12) funcao -> . FN ID LPAREN RPAREN tipo_retorno LBRACE RBRACE
    (32) decl -> . VAR ID COLON tipo_retorno EQUAL expr SEMICOLON
    (33) decl -> . CONST ID EQUAL expr SEMICOLON
    (34) decl -> . CONST ID COLON tipo_retorno EQUAL expr SEMICOLON
    (35) decl -> . ID EQUAL expr SEMICOLON
    (36) decl -> . expr SEMICOLON
    (37) decl -> . ID PLUSEQUAL expr SEMICOLON
    (38) decl -> . ID PLUSPERCENT expr SEMICOLON
    (39) decl -> . ID PLUSPERCENTEQUAL expr SEMICOLON
    (40) decl -> . ID PLUSPIPE expr SEMICOLON
    (41) decl -> . ID PLUSPIPEEQUAL expr SEMICOLON
    (42) decl -> . ID MINUSEQUAL expr SEMICOLON
    (43) decl -> . ID MINUSPERCENT expr SEMICOLON
    (44) decl -> . ID MINUSPERCENTEQUAL expr SEMICOLON
    (45) decl -> . ID MINUSPIPE expr SEMICOLON
    (46) decl -> . ID MINUSPIPEEQUAL expr SEMICOLON
    (47) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN
    (48) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN DOT expr
    (49) expr -> . ID PLUS expr
    (50) expr -> . ID
    (51) expr -> . ID DOT expr
    (52) expr -> . call
    (53) expr -> . INTEGER
    (54) expr -> . ID MINUS expr
    (55) expr -> . ID SLASH expr
    (56) expr -> . ID ASTERISK expr
    (57) expr -> . ID RARROW expr
    (58) expr -> . ID LARROW expr
    (59) expr -> . ID PERCENT expr
    (60) expr -> . ID EQUALEQUAL expr
    (61) expr -> . ID AND expr
    (62) expr -> . ID OR expr
    (63) expr -> . TRUE
    (64) expr -> . FALSE
    (26) call -> . ID LPAREN args RPAREN
    (27) call -> . ID LPAREN RPAREN

    PUB             shift and go to state 4
    FN              shift and go to state 5
    VAR             shift and go to state 7
    CONST           shift and go to state 9
    ID              shift and go to state 6
    BUILTINIDENTIFIER shift and go to state 10
    INTEGER         shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    programa                       shift and go to state 1
    funcao                         shift and go to state 2
    decl                           shift and go to state 3
    expr                           shift and go to state 8
    call                           shift and go to state 11

state 1

    (0) S' -> programa .



state 2

    (1) programa -> funcao .
    (3) programa -> funcao . programa
    (1) programa -> . funcao
    (2) programa -> . decl
    (3) programa -> . funcao programa
    (4) programa -> . decl programa
    (5) funcao -> . PUB FN ID LPAREN params RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (6) funcao -> . PUB FN ID LPAREN RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (7) funcao -> . FN ID LPAREN params RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (8) funcao -> . FN ID LPAREN RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (9) funcao -> . PUB FN ID LPAREN params RPAREN tipo_retorno LBRACE RBRACE
    (10) funcao -> . FN ID LPAREN params RPAREN tipo_retorno LBRACE RBRACE
    (11) funcao -> . PUB FN ID LPAREN RPAREN tipo_retorno LBRACE RBRACE
    (12) funcao -> . FN ID LPAREN RPAREN tipo_retorno LBRACE RBRACE
    (32) decl -> . VAR ID COLON tipo_retorno EQUAL expr SEMICOLON
    (33) decl -> . CONST ID EQUAL expr SEMICOLON
    (34) decl -> . CONST ID COLON tipo_retorno EQUAL expr SEMICOLON
    (35) decl -> . ID EQUAL expr SEMICOLON
    (36) decl -> . expr SEMICOLON
    (37) decl -> . ID PLUSEQUAL expr SEMICOLON
    (38) decl -> . ID PLUSPERCENT expr SEMICOLON
    (39) decl -> . ID PLUSPERCENTEQUAL expr SEMICOLON
    (40) decl -> . ID PLUSPIPE expr SEMICOLON
    (41) decl -> . ID PLUSPIPEEQUAL expr SEMICOLON
    (42) decl -> . ID MINUSEQUAL expr SEMICOLON
    (43) decl -> . ID MINUSPERCENT expr SEMICOLON
    (44) decl -> . ID MINUSPERCENTEQUAL expr SEMICOLON
    (45) decl -> . ID MINUSPIPE expr SEMICOLON
    (46) decl -> . ID MINUSPIPEEQUAL expr SEMICOLON
    (47) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN
    (48) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN DOT expr
    (49) expr -> . ID PLUS expr
    (50) expr -> . ID
    (51) expr -> . ID DOT expr
    (52) expr -> . call
    (53) expr -> . INTEGER
    (54) expr -> . ID MINUS expr
    (55) expr -> . ID SLASH expr
    (56) expr -> . ID ASTERISK expr
    (57) expr -> . ID RARROW expr
    (58) expr -> . ID LARROW expr
    (59) expr -> . ID PERCENT expr
    (60) expr -> . ID EQUALEQUAL expr
    (61) expr -> . ID AND expr
    (62) expr -> . ID OR expr
    (63) expr -> . TRUE
    (64) expr -> . FALSE
    (26) call -> . ID LPAREN args RPAREN
    (27) call -> . ID LPAREN RPAREN

    $end            reduce using rule 1 (programa -> funcao .)
    PUB             shift and go to state 4
    FN              shift and go to state 5
    VAR             shift and go to state 7
    CONST           shift and go to state 9
    ID              shift and go to state 6
    BUILTINIDENTIFIER shift and go to state 10
    INTEGER         shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    funcao                         shift and go to state 2
    programa                       shift and go to state 15
    decl                           shift and go to state 3
    expr                           shift and go to state 8
    call                           shift and go to state 11

state 3

    (2) programa -> decl .
    (4) programa -> decl . programa
    (1) programa -> . funcao
    (2) programa -> . decl
    (3) programa -> . funcao programa
    (4) programa -> . decl programa
    (5) funcao -> . PUB FN ID LPAREN params RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (6) funcao -> . PUB FN ID LPAREN RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (7) funcao -> . FN ID LPAREN params RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (8) funcao -> . FN ID LPAREN RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (9) funcao -> . PUB FN ID LPAREN params RPAREN tipo_retorno LBRACE RBRACE
    (10) funcao -> . FN ID LPAREN params RPAREN tipo_retorno LBRACE RBRACE
    (11) funcao -> . PUB FN ID LPAREN RPAREN tipo_retorno LBRACE RBRACE
    (12) funcao -> . FN ID LPAREN RPAREN tipo_retorno LBRACE RBRACE
    (32) decl -> . VAR ID COLON tipo_retorno EQUAL expr SEMICOLON
    (33) decl -> . CONST ID EQUAL expr SEMICOLON
    (34) decl -> . CONST ID COLON tipo_retorno EQUAL expr SEMICOLON
    (35) decl -> . ID EQUAL expr SEMICOLON
    (36) decl -> . expr SEMICOLON
    (37) decl -> . ID PLUSEQUAL expr SEMICOLON
    (38) decl -> . ID PLUSPERCENT expr SEMICOLON
    (39) decl -> . ID PLUSPERCENTEQUAL expr SEMICOLON
    (40) decl -> . ID PLUSPIPE expr SEMICOLON
    (41) decl -> . ID PLUSPIPEEQUAL expr SEMICOLON
    (42) decl -> . ID MINUSEQUAL expr SEMICOLON
    (43) decl -> . ID MINUSPERCENT expr SEMICOLON
    (44) decl -> . ID MINUSPERCENTEQUAL expr SEMICOLON
    (45) decl -> . ID MINUSPIPE expr SEMICOLON
    (46) decl -> . ID MINUSPIPEEQUAL expr SEMICOLON
    (47) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN
    (48) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN DOT expr
    (49) expr -> . ID PLUS expr
    (50) expr -> . ID
    (51) expr -> . ID DOT expr
    (52) expr -> . call
    (53) expr -> . INTEGER
    (54) expr -> . ID MINUS expr
    (55) expr -> . ID SLASH expr
    (56) expr -> . ID ASTERISK expr
    (57) expr -> . ID RARROW expr
    (58) expr -> . ID LARROW expr
    (59) expr -> . ID PERCENT expr
    (60) expr -> . ID EQUALEQUAL expr
    (61) expr -> . ID AND expr
    (62) expr -> . ID OR expr
    (63) expr -> . TRUE
    (64) expr -> . FALSE
    (26) call -> . ID LPAREN args RPAREN
    (27) call -> . ID LPAREN RPAREN

    $end            reduce using rule 2 (programa -> decl .)
    PUB             shift and go to state 4
    FN              shift and go to state 5
    VAR             shift and go to state 7
    CONST           shift and go to state 9
    ID              shift and go to state 6
    BUILTINIDENTIFIER shift and go to state 10
    INTEGER         shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    decl                           shift and go to state 3
    programa                       shift and go to state 16
    funcao                         shift and go to state 2
    expr                           shift and go to state 8
    call                           shift and go to state 11

state 4

    (5) funcao -> PUB . FN ID LPAREN params RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (6) funcao -> PUB . FN ID LPAREN RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (9) funcao -> PUB . FN ID LPAREN params RPAREN tipo_retorno LBRACE RBRACE
    (11) funcao -> PUB . FN ID LPAREN RPAREN tipo_retorno LBRACE RBRACE

    FN              shift and go to state 17


state 5

    (7) funcao -> FN . ID LPAREN params RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (8) funcao -> FN . ID LPAREN RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (10) funcao -> FN . ID LPAREN params RPAREN tipo_retorno LBRACE RBRACE
    (12) funcao -> FN . ID LPAREN RPAREN tipo_retorno LBRACE RBRACE

    ID              shift and go to state 18


state 6

    (35) decl -> ID . EQUAL expr SEMICOLON
    (37) decl -> ID . PLUSEQUAL expr SEMICOLON
    (38) decl -> ID . PLUSPERCENT expr SEMICOLON
    (39) decl -> ID . PLUSPERCENTEQUAL expr SEMICOLON
    (40) decl -> ID . PLUSPIPE expr SEMICOLON
    (41) decl -> ID . PLUSPIPEEQUAL expr SEMICOLON
    (42) decl -> ID . MINUSEQUAL expr SEMICOLON
    (43) decl -> ID . MINUSPERCENT expr SEMICOLON
    (44) decl -> ID . MINUSPERCENTEQUAL expr SEMICOLON
    (45) decl -> ID . MINUSPIPE expr SEMICOLON
    (46) decl -> ID . MINUSPIPEEQUAL expr SEMICOLON
    (49) expr -> ID . PLUS expr
    (50) expr -> ID .
    (51) expr -> ID . DOT expr
    (54) expr -> ID . MINUS expr
    (55) expr -> ID . SLASH expr
    (56) expr -> ID . ASTERISK expr
    (57) expr -> ID . RARROW expr
    (58) expr -> ID . LARROW expr
    (59) expr -> ID . PERCENT expr
    (60) expr -> ID . EQUALEQUAL expr
    (61) expr -> ID . AND expr
    (62) expr -> ID . OR expr
    (26) call -> ID . LPAREN args RPAREN
    (27) call -> ID . LPAREN RPAREN

    EQUAL           shift and go to state 19
    PLUSEQUAL       shift and go to state 20
    PLUSPERCENT     shift and go to state 21
    PLUSPERCENTEQUAL shift and go to state 22
    PLUSPIPE        shift and go to state 23
    PLUSPIPEEQUAL   shift and go to state 24
    MINUSEQUAL      shift and go to state 25
    MINUSPERCENT    shift and go to state 26
    MINUSPERCENTEQUAL shift and go to state 27
    MINUSPIPE       shift and go to state 28
    MINUSPIPEEQUAL  shift and go to state 29
    PLUS            shift and go to state 30
    SEMICOLON       reduce using rule 50 (expr -> ID .)
    DOT             shift and go to state 31
    MINUS           shift and go to state 32
    SLASH           shift and go to state 33
    ASTERISK        shift and go to state 34
    RARROW          shift and go to state 35
    LARROW          shift and go to state 36
    PERCENT         shift and go to state 37
    EQUALEQUAL      shift and go to state 38
    AND             shift and go to state 39
    OR              shift and go to state 40
    LPAREN          shift and go to state 41


state 7

    (32) decl -> VAR . ID COLON tipo_retorno EQUAL expr SEMICOLON

    ID              shift and go to state 42


state 8

    (36) decl -> expr . SEMICOLON

    SEMICOLON       shift and go to state 43


state 9

    (33) decl -> CONST . ID EQUAL expr SEMICOLON
    (34) decl -> CONST . ID COLON tipo_retorno EQUAL expr SEMICOLON

    ID              shift and go to state 44


state 10

    (47) expr -> BUILTINIDENTIFIER . LPAREN STRING RPAREN
    (48) expr -> BUILTINIDENTIFIER . LPAREN STRING RPAREN DOT expr

    LPAREN          shift and go to state 45


state 11

    (52) expr -> call .

    SEMICOLON       reduce using rule 52 (expr -> call .)
    RPAREN          reduce using rule 52 (expr -> call .)


state 12

    (53) expr -> INTEGER .

    SEMICOLON       reduce using rule 53 (expr -> INTEGER .)
    RPAREN          reduce using rule 53 (expr -> INTEGER .)


state 13

    (63) expr -> TRUE .

    SEMICOLON       reduce using rule 63 (expr -> TRUE .)
    RPAREN          reduce using rule 63 (expr -> TRUE .)


state 14

    (64) expr -> FALSE .

    SEMICOLON       reduce using rule 64 (expr -> FALSE .)
    RPAREN          reduce using rule 64 (expr -> FALSE .)


state 15

    (3) programa -> funcao programa .

    $end            reduce using rule 3 (programa -> funcao programa .)


state 16

    (4) programa -> decl programa .

    $end            reduce using rule 4 (programa -> decl programa .)


state 17

    (5) funcao -> PUB FN . ID LPAREN params RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (6) funcao -> PUB FN . ID LPAREN RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (9) funcao -> PUB FN . ID LPAREN params RPAREN tipo_retorno LBRACE RBRACE
    (11) funcao -> PUB FN . ID LPAREN RPAREN tipo_retorno LBRACE RBRACE

    ID              shift and go to state 46


state 18

    (7) funcao -> FN ID . LPAREN params RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (8) funcao -> FN ID . LPAREN RPAREN tipo_retorno LBRACE decl_interna RBRACE
    (10) funcao -> FN ID . LPAREN params RPAREN tipo_retorno LBRACE RBRACE
    (12) funcao -> FN ID . LPAREN RPAREN tipo_retorno LBRACE RBRACE

    LPAREN          shift and go to state 47


state 19

    (35) decl -> ID EQUAL . expr SEMICOLON
    (47) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN
    (48) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN DOT expr
    (49) expr -> . ID PLUS expr
    (50) expr -> . ID
    (51) expr -> . ID DOT expr
    (52) expr -> . call
    (53) expr -> . INTEGER
    (54) expr -> . ID MINUS expr
    (55) expr -> . ID SLASH expr
    (56) expr -> . ID ASTERISK expr
    (57) expr -> . ID RARROW expr
    (58) expr -> . ID LARROW expr
    (59) expr -> . ID PERCENT expr
    (60) expr -> . ID EQUALEQUAL expr
    (61) expr -> . ID AND expr
    (62) expr -> . ID OR expr
    (63) expr -> . TRUE
    (64) expr -> . FALSE
    (26) call -> . ID LPAREN args RPAREN
    (27) call -> . ID LPAREN RPAREN

    BUILTINIDENTIFIER shift and go to state 10
    ID              shift and go to state 48
    INTEGER         shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expr                           shift and go to state 49
    call                           shift and go to state 11

state 20

    (37) decl -> ID PLUSEQUAL . expr SEMICOLON
    (47) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN
    (48) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN DOT expr
    (49) expr -> . ID PLUS expr
    (50) expr -> . ID
    (51) expr -> . ID DOT expr
    (52) expr -> . call
    (53) expr -> . INTEGER
    (54) expr -> . ID MINUS expr
    (55) expr -> . ID SLASH expr
    (56) expr -> . ID ASTERISK expr
    (57) expr -> . ID RARROW expr
    (58) expr -> . ID LARROW expr
    (59) expr -> . ID PERCENT expr
    (60) expr -> . ID EQUALEQUAL expr
    (61) expr -> . ID AND expr
    (62) expr -> . ID OR expr
    (63) expr -> . TRUE
    (64) expr -> . FALSE
    (26) call -> . ID LPAREN args RPAREN
    (27) call -> . ID LPAREN RPAREN

    BUILTINIDENTIFIER shift and go to state 10
    ID              shift and go to state 48
    INTEGER         shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expr                           shift and go to state 50
    call                           shift and go to state 11

state 21

    (38) decl -> ID PLUSPERCENT . expr SEMICOLON
    (47) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN
    (48) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN DOT expr
    (49) expr -> . ID PLUS expr
    (50) expr -> . ID
    (51) expr -> . ID DOT expr
    (52) expr -> . call
    (53) expr -> . INTEGER
    (54) expr -> . ID MINUS expr
    (55) expr -> . ID SLASH expr
    (56) expr -> . ID ASTERISK expr
    (57) expr -> . ID RARROW expr
    (58) expr -> . ID LARROW expr
    (59) expr -> . ID PERCENT expr
    (60) expr -> . ID EQUALEQUAL expr
    (61) expr -> . ID AND expr
    (62) expr -> . ID OR expr
    (63) expr -> . TRUE
    (64) expr -> . FALSE
    (26) call -> . ID LPAREN args RPAREN
    (27) call -> . ID LPAREN RPAREN

    BUILTINIDENTIFIER shift and go to state 10
    ID              shift and go to state 48
    INTEGER         shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expr                           shift and go to state 51
    call                           shift and go to state 11

state 22

    (39) decl -> ID PLUSPERCENTEQUAL . expr SEMICOLON
    (47) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN
    (48) expr -> . BUILTINIDENTIFIER LPAREN STRING RPAREN DOT expr
    (49) expr -> . ID PLUS expr
    (50) expr -> . ID
    (51) expr -> . ID DOT expr
    (52) expr -> . call
    (53) expr -> . INTEGER
    (54) expr -> . ID MINUS expr
    (55) expr -> . ID SLASH expr
    (56) expr -> . ID ASTERISK expr
    (57) expr -> . ID RARROW expr
    (58) expr -> . ID LARROW expr
    (59) expr -> . ID PERCENT expr
    (60) expr -> . ID EQUALEQUAL expr
    (61) expr -> . ID AND expr
    (62) expr -> . ID OR expr
    (63) expr -> . TRUE
    (64) expr -> . FALSE
    (26) call -> . ID LPAREN args RPAREN
    (27) call -> . ID LPAREN RPAREN

    BUILTINIDENTIFIER shift and go to state 10
    ID              shift and go to state 48
    INTEGER         shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14

    expr                           shift and go to state 52
    call                           shift and go to state 11

state 23
